trunk/Archive2/8e/d978466abf3bfa/output
main.cpp: In function 'int main()':
main.cpp:13:13: error: invalid initialization of reference of type 'const std::initializer_list<int>&' from expression of type 'const std::initializer_list<const int>'
     fn(ilist);
             ^
main.cpp:4:6: note: in passing argument 1 of 'void fn(const std::initializer_list<int>&)'
 void fn(const std::initializer_list<int> &ilist) {
      ^
